@@ -1,6 +1,6 @@
 /* gtk+-2.0.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -22,7 +22,7 @@
 
 namespace Gtk {
 	[Import]
-	public void init (out string[] args);
+	public void init (ref string[] args);
 
 	public struct Allocation {
 		public int x;
