@@ -1,3 +1,11 @@
+2008-01-10  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valasemanticanalyzer.vala: check in/ref/out arguments
+
+	* vapi/packages/gtk+-2.0/gtk+-2.0-custom.vala: fix gtk_init
+
+	* vapi/gtk+-2.0.vapi: regenerated
+
 2008-01-09  Jürg Billeter  <j@bitron.ch>
 
 	* vapi/glib-2.0.vapi: add bindings for uri functions
